chore: add url textbox

--- a/.github/workflows/release_to_staging.yml
+++ b/.github/workflows/release_to_staging.yml
@@ -7,6 +7,9 @@ on:
       tag:
         description: "Tag"
         required: true
+      release_tag_task_url:
+        description: "Release Tag task URL"
+        required: true
       skip_circleci_checks:
         description: "Skip checking CircleCI workflow"
         type: boolean
@@ -35,9 +38,10 @@ jobs:
         run: |
           sleep 10
       - name: Release issues in Deriv.app
-        uses: binary-com/fe-toolbox@production_V20230615_0
+        uses: jimdanielw/fe-toolbox@test_V20230622_0
         with:
           tag: ${{ inputs.tag }}
+          release_tag_task_url: ${{ inputs.release_tag_task_url }}
           platform: "Deriv.app"
           list_id: ${{ secrets.LIST_ID }}
           release_tags_list_id: ${{ secrets.RELEASE_TAGS_LIST_ID }}
@@ -49,4 +53,4 @@ jobs:
           CLICKUP_API_TOKEN: ${{ secrets.CLICKUP_API_TOKEN }}
           SLACK_APP_TOKEN: "123"
           SLACK_USER_TOKEN: "123"
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          SLACK_BOT_TOKEN: "123"
