--- a/.github/workflows/release_to_staging.yml
+++ b/.github/workflows/release_to_staging.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           sleep 10
       - name: Release issues in Deriv.app
-        uses: jimdanielw/fe-toolbox@test_V20230622_1
+        uses: jimdanielw/test_ffe_toolbox@test_V20230622_1
         with:
           tag: ${{ inputs.tag }}
           release_tag_task_url: ${{ inputs.release_tag_task_url }}
